# RustHTTPTemplate

./: Cargo.toml  Dockerfile  README.md
proto/: helloworld.proto
src/: lib.rs  main.rs  rate_limiter.rs
src/grpc/: hello_world.rs  helloworld.rs
src/json_rpc/: mod.rs
src/json_rpc_macro/: lib.rs
src/routes/: echo.rs  mod.rs
tests/: api_tests.rs  grpc_test.rs
