[package]
name = "rust_http_template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
axum-extra = "0.9.4"
reqwest = "0.12.9"
serde = { version = "1.0.214", features = ["serde_derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
tonic = "0.12.3"
tower = { version = "0.5.1", features = ["buffer", "steer", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.0", features = ["trace"] }
futures-util = "0.3"
hyper = "1.5.0"

[build-dependencies]
tonic-build = "0.12.3"
