[package]
name = "rust_http_template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = "0.9.4"
serde = { version = "1.0.214", features = ["serde_derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
tonic = "0.12.3"
tower = { version = "0.5.1", features = ["buffer", "steer", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tower-http = { version = "0.5.0", features = ["trace"] }
futures-util = "0.3"
hyper = { version = "1.5.0", features = ["server"] }
prost = "0.13.3"
futures = "0.3.31"
tokio-stream = "0.1.17"
validator = { version = "0.19", features = ["derive"] }
tracing-serde = "0.2.0"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["json", "stream"] }
